--- a/website les 11&12/website/stylesheet.css
+++ b/website les 11&12/website/stylesheet.css
@@ -109,7 +109,10 @@
 
 
 table {
-    width: 800px; height: 400px;     
+    border-style: solid;
+    width: 800px; height: 90%;
+    border-color: black;   
+    border: thin solid;   
 }
 
 td {
